--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Compiler output
-*/out/*
+*/out/**
 
 # IDEA files
-*/.idea/*
+*/.idea/**
 
 # Compiled class file
 *.class
@@ -26,7 +26,7 @@
 *.rar
 
 # Libs
-!**/lib/*
+!**/lib/**
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
